--- a/resources/scss/product/shop.scss
+++ b/resources/scss/product/shop.scss
@@ -285,6 +285,9 @@
     .arrow-next {
         bottom: -28px;
     }
+    .slick-track {
+        transform: translate3d(0) !important;
+    }
 }
 .shop-products-slider-small.slick-vertical .slick-slide {
     margin-bottom: 10px;
